--- a/my-counter/Move.toml
+++ b/my-counter/Move.toml
@@ -1,10 +1,11 @@
 [package]
 name = "my-counter"
-version = "0.1.0"
+version = "0.2.0"
 
 [dependencies]
 StarcoinFramework = { git = "https://github.com/starcoinorg/starcoin-framework.git", rev = "main" }
 
 [addresses]
-MyCounterAddr =  "0x6a239daba1c29d1047fdea1482bc9107"
+#MyCounterAddr =  "0x6a239daba1c29d1047fdea1482bc9107"
 #StarcoinFramework = "0x2"
+MyModuleAddr = "0x6855ee1e49777457cc1b02c718074135"
